[package]
name = "u880"
version = "0.1.2"
authors = [
    "René Coignard <contact@renecoignard.com>"
]
edition = "2024"
rust-version = "1.96"
license = "GPL-3.0-or-later"
description = "A cycle-stepped MME U880 emulator"
homepage = "https://coignard.org/u880"
repository = "https://github.com/coignard/u880"
readme = "README"
keywords = ["u880", "mme", "z80", "zilog", "cpu"]
categories = ["emulators", "no-std"]
exclude = [".github/*"]

[dependencies]
